# Majestrino-Tagger

./: .gitignore  LICENSE  README.md  pyproject.toml
majestrino_tagger/: __init__.py  model.py  pipeline.py  tags.json
